// Copyright (C) 2019 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "storj.io/storj/satellite/internalpb";

import "gogo.proto";
import "google/protobuf/timestamp.proto";

package satellite.repair;

// InjuredSegment is the queue item used for the data repair queue.
message InjuredSegment {
    bytes path = 1;
    repeated int32 lost_pieces = 2;
    google.protobuf.Timestamp inserted_time = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}
